提交文档链接

--- a/源码研究之测试代码编写.md
+++ b/源码研究之测试代码编写.md
@@ -6,7 +6,7 @@
 
 ## 知识点
 
-### 特性:
+### 特性
 
 适应性：Jest是模块化、可扩展和可配置的。也就是说能应付小功能也可以应对大场景下的测试.
 
@@ -15,4 +15,26 @@
 快照测试:Jest能够对React 树进行快照或别的序列化数值快速编写测试,提供快速更新的用户体验。
 
 快速交互模式: 错误信息会有帮助的颜色编码标记,堆栈跟踪快速指向问题的根源。
+
+#### 语法
+
+Jest是Facebook开发的一个对javascript进行单元测试的工具，之前仅在其内部使用，后开源，并且是在Jasmine测试框架上演变开发而来，使用了我们熟知的`expect(value).toBe(other)`这种断言格式。这种格式符合我们的日常口语逻辑:期望某个值是某个值.
+
+举个例子:
+
+```javascript
+test('1 + 2 等于 3', ()=> {
+    expect(1 + 2).toBe(3);
+});
+```
+
+上面这段代码很简单,也很没有实用性,别慌!我只是为了引出`test`的使用方法.`test`实际上就是声明一个测试用例,第一个参数为用例的名称,想取啥取啥,不过一定要与测试代码的功能相关,不然执行测试脚本的时候,你就不能直观的看出来是哪段用例报错了.
+
+而在`test`之上,又有叫做`describe`的东西.它是用例的集合,比如一段增删改查的流程就可以放在一个`describe`中,他的使用方法与`test`一致,都是首个参数为名称,第二个参数为测试执行函数.
+
+
+
+
+
+
 
