--- a/源码研究之测试代码编写.md
+++ b/源码研究之测试代码编写.md
@@ -2,7 +2,7 @@
 
 ## 前言
 
-本想打算研究swagger2Mock的实现逻辑,琢磨了下代码之后发现,基本上是从一个格式转化到另一个格式,更多的是业务逻辑上的转换,没有太多的技术知识.不过在研究`swagger-parser-mock`这个功能库时,意外的收获到一些关于单元测试的编写实践.于是做下分享与记录.
+本想打算研究swagger2Mock的实现逻辑,琢磨了下代码之后发现,基本上是从一个格式转化到另一个格式,更多的是业务逻辑上的转换,没有太多的技术知识.不过在研究`swagger-parser-mock`这个功能库时,意外的收获到一些关于单元测试的编写实践.于是做下分享与记录.TL;DR
 
 ## 知识点
 
@@ -92,6 +92,8 @@ let numToFixed = (num, len = 1) => {
 export {numToFixed}
 ```
 
+#### 结合开发场景,我们该怎么写工具类函数的单元测试
+
 结合下尽可能出现的场景,试着写下单元测试:
 
 ```js
@@ -150,6 +152,105 @@ Ran all test suites matching /fixed.test.js/i.
 竟然神奇的发现测试的总体时间减少了三分之一,并且全部通过了测试.当然,不排除一些机子运行状态不同导致的时间差别,不过能少写段代码自然是最好的.
 
 #### 接口测试
+
+稍微看下`easy-mock`的单测骨架:
+
+```js
+describe('test/controllers/group.test.js', () => {
+  let request, user, soucheUser
+  afterAll(() => spt.cleanCollections())
+  beforeAll(async () => {
+    user = await spt.createUser()
+    request = spt.createRequest(app.listen(), user.token)
+  })
+  describe('create', () => {
+    test('参数验证', async () => {
+      const res = await request('/api/group/create', 'post')
+      expect(res.body.message).toBe('params error')
+    })
+    //..test
+  })
+  //...describe
+})
+```
+
+先来聊聊几个生面孔:
+
+* `beforeAll`,`afterAll`:
+  这两个是`jest`提供的内部钩子.正如其名,负责在测试用例组执行前或者后执行的方法.
+
+* `spt.cleanCollections`:
+  这是`easyMock`内部实现的一个方法,主要是为了释放测试运行结束时产生的临时数据.
+
+* `beforeAll`内部做了哪些东西:
+  首先是在临时环境中请求了创建用户接口,然后将刚刚创建的用户的标识(`user.token`),放入请求函数中,以保证接下来每次调用请求相关的操作的时候可以保证`token`的正确性
+
+* `async`,`await`:
+  ES2017的异步编程新语法,贼酷炫,贼想用,想了解的话自行百度吧~
+
+用例说明:
+  看描述就知道,这是个测试参数验证的用例,希望发送一个不带参数或者带错参数的情况下,可以抛出预期的错误文案或者错误处理.光看代码,应该也可以很清楚的看出来了.
+
+#### 结合开发场景,我们该怎么写接口单元测试
+
+  与`EasyMock`不同的是,我们的后端逻辑由C#实现,无法保证前端请求接口时有个临时的数据库映射供我们测试,所以要写接口单元测试的话意义不大,仍然会对数据库产生数据,跟现有的后端做的伪单元测试类似,还需要将测试数据删除.不过还是稍微写个`demo`意思下:
+
+  ```js
+const request = require('supertest');
+const url = 'http://192.168.5.187:15844';
+describe('login', () => {
+	test('正常登录', () => {
+		request(url)
+			.post('/api/MemberShip/Login')
+			.send({
+				name: 'admin',
+				password: '123456'
+			})
+			.then(data => {
+				expect(JSON.parse(data.text).state).toBe(0)
+			})
+	})
+	test('密码错误', () => {
+		request(url)
+			.post('/api/MemberShip/Login')
+			.send({
+				name: 'admin',
+				password: '666'
+			})
+			.then(data => 
+				expect(JSON.parse(data.text).state).toBe(1010013)
+			})
+	})
+})
+
+  ```
+
+  本代码主要是写了个登录接口的测试,然后用例分为密码错误和正常情况两种用例,当密码不正确的时候,我们期望可以抛出对应的错误码,于是执行一遍单元测试:
+
+  ```shell
+➜  role_tools git:(local1.5.5) ✗ jest
+ PASS  ../../../test/api/user.test.js
+  login
+    ✓ 正常登录 (9ms)
+    ✓ 密码错误 (1ms)
+
+Test Suites: 1 passed, 1 total
+Tests:       2 passed, 2 total
+Snapshots:   0 total
+Time:        0.778s, estimated 1s
+Ran all test suites.
+  ```
+
+恭喜,接口测试成功!(戏精上身..)
+
+### 总结
+
+由于`easyMock`项目中的单元测试,基本上就涉及以上两种测试类型,具体还有其他什么类型的测试还需要在实际项目中实行一段时间才知道,对于工具类的单元测试,个人还是认为有必要在前端进行测试覆盖的,这样对于代码的质量保证具有一定意义.而接口测试的话,由于业务逻辑不是通过`node`写,`jest`覆盖不到实际的业务逻辑,意义不是很大,而且成本也大,毕竟每个接口还要考虑不同的场景,效益原低于成本,所以对于我们目前的项目结构的话,接口测试个人认为可以不必要.
+
+
+
+
+
 
 
 
