添加文档索引

--- a/源码研究之测试代码编写.md
+++ b/源码研究之测试代码编写.md
@@ -4,6 +4,16 @@
 
 本想打算研究swagger2Mock的实现逻辑,琢磨了下代码之后发现,基本上是从一个格式转化到另一个格式,更多的是业务逻辑上的转换,没有太多的技术知识.不过在研究`swagger-parser-mock`这个功能库时,意外的收获到一些关于单元测试的编写实践.于是做下分享与记录.TL;DR
 
+## 文档索引
+
+1. [特性](#特性)
+1. [语法](#语法)
+1. [工具函数的单元测试](#工具函数的单元测试)
+1. [结合开发场景,我们该怎么写工具类函数的单元测试](#结合开发场景,我们该怎么写工具类函数的单元测试)
+1. [接口测试](#接口测试)
+1. [结合开发场景,我们该怎么写接口单元测试](#结合开发场景,我们该怎么写接口单元测试)
+1. [总结](#总结)
+
 ## 知识点
 
 ### 特性
